--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 //	compile('org.springframework.cloud:spring-cloud-starter-aws')
 //	compile('org.springframework.cloud:spring-cloud-starter-aws-jdbc')
 //	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile ("org.springframework.boot:spring-boot-starter-data-jpa")
